@@ -56,7 +56,7 @@ Existing packet types are listed in the file libs/Module.h:
 #define <A href="#M_MINI_ICON">M_MINI_ICON</A>            (1&lt;&lt;23)
 #define <A href="#M_WINDOWSHADE">M_WINDOWSHADE</A>          (1&lt;&lt;24)
 #define <A href="#M_DEWINDOWSHADE">M_DEWINDOWSHADE</A>        (1&lt;&lt;25)
-#define <A href="#M_LOCKONSEND">M_LOCKONSEND</A>           (1&lt;&lt;26)
+#define <A href="#M_NOTUSED">M_NOTUSED</A>              (1&lt;&lt;26)
 #define <A href="#M_SENDCONFIG">M_SENDCONFIG</A>           (1&lt;&lt;27)
 #define <A href="#M_RESTACK">M_RESTACK</A>              (1&lt;&lt;28)
 #define <A href="#M_ADD_WINDOW">M_ADD_WINDOW</A>           (1&lt;&lt;29)
@@ -359,9 +359,10 @@ defined, and contains the filename of the mini_icon.
 </H2>
 This packet is sent when a window is window shaded.
 It contains no additional information.
-<H2><A NAME="M_LOCKONSEND">M_LOCKONSEND</A></H2>
-This is a request sent from modules to fvwm and is described
-under <a href="mod_m2f_communication.html">Module to Fvwm communication</a>.
+<H2><A NAME="M_NOTUSED">M_NOTUSED</A></H2>
+Not used. It was M_LOCKONSEND which is no more needed. The new "lock on send" 
+logic is described under <a href="mod_m2f_communication.html">
+Module to Fvwm communication</a>.
 <H2><A NAME="M_SENDCONFIG">M_SENDCONFIG</A></H2>
 This is a request sent from modules to fvwm and is described
 under <a href="mod_m2f_communication.html">Module to Fvwm communication</a>.
