@@ -107,7 +107,7 @@ a number which is  the bitwise OR of  the packet-types the
 module wishes  to receive. If  the module   never  sends the  Set_Mask
 command,  then all message  types in the  default mask  are sent.  The
 default  mask   is  defined  in fvwm/module.h   as  "MAX_MASK".   This
-currently (October 1998) includes all messages except M_LOCKONSEND and
+currently (November 1999) includes all messages except M_NOTUSED and
 M_SENDCONFIG.  A  library function, SetMessageMask,  makes it
 easy to set  this mask. Here  is an  example from FvwmBacker.c:  <font
 color="yellow"><pre>
@@ -121,14 +121,20 @@ A module normally runs asynchrously with fvwm2.  For example FvwmPager
 may be updating its display to show a window being iconified while fvwm2
 may have already iconfied and de-iconified the window.  This is usually
 desirable.
-Other modules might need to synchronize their processing with fvwm.
-If this is the case, a module will include in its message mask
-"M_LOCKONSEND".  When this mask bit is on, every message sent to the
+Other modules might need to synchronize (a part of) their processing with 
+fvwm. If this is the case, the module need to say to fvwm which packet-types
+it wishes to be processed synchrously. There is a mask for this propose. 
+A  library function, SetSyncMask, allows to set this mask. 
+Here  is an  example from FvwmAnimate.c:  
+<font color="yellow"><pre>
+SetSyncMask(Channel,M_ICONIFY|M_DEICONIFY|M_STRING);
+</pre></font> 
+When this mask is set, every message in the mask sent to the
 module from fvwm must be answered with an "UNLOCK" message.
-FvwmAnimate is (was?) the first module to implement this and should be
+FvwmAnimate is the first module to implement this and should be
 used as a reference implementation.  Note that FvwmAnimate sends the command
 "UNLOCK 1".  The "1" is currently ignored but may be used in the future.
-This whole facility comes from Afterstep, and we are just tracking what they
+This facility comes from Afterstep, and we are just tracking what they
 have done.  The Afterstep documentation doesn't seem to say, but most
 likely this is the time in seconds that fvwm should wait for the module
 to respond with "UNLOCK" before it proceeds without the module's response.
